--- a/sass/_welcome.scss
+++ b/sass/_welcome.scss
@@ -78,6 +78,60 @@
     &_dot {
         width: 10px;
         height: 10px;
-        background-color: black;
+        background-color: colors.$commonGreenColor;
+        border-radius: 5px;
+        animation-name: move, color, opacity;
+        animation-duration: 1s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+    }
+}
+
+@keyframes move {
+    from {
+        transform: translateY(0);
+    }
+
+    33% {
+        transform: translateY(-10px);
+    }
+
+    66% {
+        transform: translateY(10px);
+    }
+
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes color {
+    from {
+        background-color: colors.$commonGreenColor;
+    }
+
+    to {
+        background-color: colors.$backgroundColorWhite;
+    }
+    
+}
+
+@keyframes opacity {
+    from {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+    
+    to {
+        opacity: 1;
+    }
+}
+
+@for $i from 1 through 5 {
+    .loader_dot:nth-child(#{$i}) {
+        animation-delay: $i * 0.2 + s;
     }
 }
